@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 91edaebc56f5ed1c13433ce7a6327ee1e3ee8c6e ChangeLog
+SHA1 2748820fe58b249aff535aebe8827cfc8273441b ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 9514944c6a4e9e8b33da130bc8d883b284b36647 META.yml
-SHA1 ed4baa3a78b7256940b28c3edff05395d8263ed7 Makefile.PL
+SHA1 bf0535f9866505b2ef0aa58aa809aec3df4d5afb META.yml
+SHA1 4855d68288ee7d4145637ca6399fb40ba0e88ef3 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 1c4ea22ed3fe09c1413393a6748d6e72572e6c8f lib/Net/FullAuto.pm
+SHA1 ee1a6c913a9bd7f191a1eaefe0c651a381c369f5 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJT0BrFAAoJEBa/9Pad787EQLcH/2w5kW83zOPVL5cO+GGuczo8
-hPCS4LXTh3QTiF/HWG78szn5WhWZDZFaLzEs68dRzL4lcKXRuW06NKpk6C8NKP1T
-GbjAz9Mxgx0zZlUJwHijNmeOpjlxo6LfgqBgeQS+DKziK5+Xsc+a0nd1G6itbd3/
-IivFzR/auSAAa0ulgim853LfzII2AkI4dFA10ees1COaeUXrcV0YvidDfCR1mZKk
-3To8/TVnaerNQCQGQ5xHKaeUUZmC2+SziXdzyBGjYhGad+bIhkEhXVv/pQfs2Yae
-7EsMCa6uwRRiJVUyPShWGCyBuO6MmYb7bUMjTpMhUht1n2+oYwMt33eWH4lP8Xk=
-=vbM4
+iQEcBAEBAgAGBQJT0QwHAAoJEBa/9Pad787E2QwIAJk8idBxrljoGXbWFAa2cl+r
+DgxgZ/5XxOMpdDliGdTBLC2rGubB+9wrTwUdl+efKDTwKtbJBZyPbGIBs59XiJ7T
+MQ87VzLZa/wSKxG3kEAROLBgzFEP6Ta/iqHeow/IyUpBpg9OxE31nKWn5TJsJRDx
+Zi/rFBKBXOFKuWQBYKfG32wVhlQYZ/fLCESHdmjgwGY5lzz8SDYK1M6wAuK/uWu7
+kAfeKYFLnamBTrRhOCqvkwLR37822IM8toktomXixi+F62FOil2DZb8t2xbgktAW
+lEEFDmxZEqzOLTUNVVitlpwDY/eMZqld+Sn4ZdY+l7KakLDF7rHpE3WSvObBDRA=
+=ssOG
 -----END PGP SIGNATURE-----
