@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999973';
+our $VERSION='0.9999999974';
 
 
 use 5.005;
